# gongbang

./: COPYING  meson.build  meson_options.txt
doc/: meson.build
src/: gongbanggraph.vala  gongbangloadxml.vala  gongbangmarkup.vala  meson.build
test/: meson.build  test_load_xml.vala  test_markup.vala
